<resources>
    <string name="app_name">RSHLN</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_orders">Your Orders</string>
    <string name="menu_profile">Your Profile</string>
    <string name="cart">Cart</string>
    <string name="welcome_text">Welcome to the RSHLN</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="send_otp_button_text">Send OTP</string>
    <string name="enter_otp_authentication_text">Enter OTP</string>
    <string name="login_button_text">Login</string>
    <string name="title_detail_fragment">Product Details</string>
    <string name="product_not_available">This Product is currently not available</string>
    <string name="title_cart_fragment">Cart</string>
    <string name="title_address_fragment">Add new address</string>
    <string name="title_choose_address_fragment">Choose Address</string>
    <string name="title_edit_address_fragment">Edit Address</string>
    <string name="title_payment_fragment">Choose Payment Method</string>
    <string name="title_summary_fragment">Order Summary</string>
    <string name="title_order_details">Order Details</string>
    <string name="amount_payable">Amount Payable</string>
    <string name="shipping_address">Shipping Address-</string>
    <string name="email_helpline">rshlnentrepreneurs@gmail.com</string>
    <string name="mobile_helpline">+919530351137</string>
    <string name="slogan_helpline">We will be glad to help you.</string>
    <string name="helpline">Helpline</string>
    <string name="title_fragment_helpline">Helpline</string>
</resources>