<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AuthenticationActivity">

        <TextView
            android:id="@+id/welcome_text_authentication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/welcome_text"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/phone_number_label_in_authentication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/phone_number_in_authentication"
            app:layout_constraintBottom_toTopOf="@id/phone_number_in_authentication"
            android:layout_marginBottom="16dp"
            android:textSize="20sp"
            android:text="Enter Mobile Number (India Only)"/>

        <!--This will be used to enter the phone number-->
        <EditText
            android:id="@+id/phone_number_in_authentication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/enter_phone_number"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <!--On click of this buttton OTP will be send to phone-->
        <Button
            android:id="@+id/send_otp_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/send_otp_button_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_number_in_authentication"/>

        <TextView
            android:id="@+id/enter_otp_authentication_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:text="@string/enter_otp_authentication_text"
            android:textSize="20sp"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--We will use it to enter OTP after we receive OTP-->
        <EditText
            android:id="@+id/enter_otp_authentication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/enter_otp_authentication_text"
            android:visibility="gone"
            android:inputType="number"
            android:maxLength="6"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enter_otp_authentication_label"/>

        <!--On click of this button final authentication will start-->
        <Button
            android:id="@+id/resend_otp_button_authentication"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Resend otp"
            android:visibility="gone"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintStart_toStartOf="@id/enter_otp_authentication"
            app:layout_constraintEnd_toStartOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/enter_otp_authentication" />

        <TextView
            android:id="@+id/resend_otp_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/resend_otp_button_authentication"
            app:layout_constraintEnd_toEndOf="@id/resend_otp_button_authentication"
            app:layout_constraintTop_toBottomOf="@id/resend_otp_button_authentication"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/login_button_authentication"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login_button_text"
            android:visibility="gone"
            android:layout_marginTop="16dp"
            android:layout_marginStart="4dp"
            app:layout_constraintStart_toEndOf="@id/guideline2"
            app:layout_constraintEnd_toEndOf="@id/enter_otp_authentication"
            app:layout_constraintTop_toBottomOf="@id/enter_otp_authentication" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>